# Tokenizers.DotNet

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  build_all_clean.ps1  build_dotnet.ps1  build_rust.ps1  clear.ps1  clear_all.ps1  clear_docker.ps1  clear_dotnet.ps1  clear_nuget.ps1  clear_rust.ps1  copy_libs_from_docker.ps1  pack.sh  test_dotnet.ps1  update_version.ps1  update_version.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build.yml  build_windows-x64.yml  build_windows.yml  docker-image.yml
dotnet/: .gitignore  Tokenizers.DotNet.sln  Tokenizers.DotNet.snk
dotnet/ConsoleExample/: ConsoleExample.csproj  Program.cs
dotnet/Tokenizers.DotNet/: ByteBuffer.cs  HuggingFace.cs  NativeMethods.cs  Tokenizer.cs  TokenizerException.cs  Tokenizers.DotNet.csproj  Tokenizers.DotNet.nuspec  hf_tokenizers.dll.exp  hf_tokenizers.dll.lib
dotnet/Tokenizers.DotNet.Test/: APITest.cs  FFITest.cs  LifetimeTests.cs  ThreadSafetyTests.cs  Tokenizers.DotNet.Test.csproj
dotnet/Tokenizers.DotNet.Test/Internals/: ModelId.cs  Models.cs  TimeIterator.cs  (+2 more)
nuget/: Tokenizers.DotNet.nuspec
nuget/linux-arm64/: Tokenizers.DotNet.runtime.linux-arm64.nuspec
nuget/linux-x64/: Tokenizers.DotNet.runtime.linux-x64.nuspec
nuget/osx-arm64/: Tokenizers.DotNet.runtime.osx-arm64.nuspec
nuget/osx-x64/: Tokenizers.DotNet.runtime.osx-x64.nuspec
nuget/win-arm64/: Tokenizers.DotNet.runtime.win-arm64.nuspec  Tokenizers.DotNet.runtime.win.nuspec
nuget/win-x64/: Tokenizers.DotNet.runtime.win-x64.nuspec  Tokenizers.DotNet.runtime.win.nuspec
rust/: Cargo.toml  README.md  build.rs  copy_libs.ps1
rust/.cargo/: config.toml
rust/src/: lib.rs
test-assets/: README.md
(+1 files in other folders)
