[package]
name = "hf_tokenizers"
version = "1.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[build-dependencies]
csbindgen = "1.9.3"

[dependencies]
tokenizers = { version = "0.21.1", default-features = false, features = ["onig", "progressbar"] }
once_cell = "1.19.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[build]
target = "x86_64-pc-windows-gnullvm"
