[package]
name = "hf_tokenizers"
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[build-dependencies]
csbindgen = "1.9.5"

[dependencies]
tokenizers = { version = "0.21.4", default-features = false, features = ["onig"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
mimalloc = "0.1.47"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[build]
target = "x86_64-pc-windows-gnullvm"
